# notion-api

./: README.md  app.py  pyproject.toml
utils/: get_secret.py
