[project]
name = "spotify-cloud"
version = "0.1.0"
description = "Projeto de estudo sobre tecnologias cloud gcp"
authors = [
    {name = "Vitor Soier",email = "vitorsoier1@gmail.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "spotipy (>=2.25.0,<3.0.0)",
    "google-cloud-secret-manager (>=2.22.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
